# btl

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/ball/types/: tests.cmake
cmake/ball/types/base/: tests.cmake
include/ball/: new.cppm  new.hpp  types.cppm  types.hpp
include/ball/types/: allocator.hpp  base.cppm  base.h  base.hpp  bits.hpp  elements.hpp  math.hpp  memoryaligned.h  memoryview.hpp  memoryviewbase.hpp  meta.hpp  number.hpp  string.hpp  stringview.hpp  vector.hpp  xvalue.hpp
include/ball/types/base/: arch.cppm  arch.h  arch.hpp  characters.cppm  characters.h  characters.hpp  fixed.cppm  fixed.h  fixed.hpp
include/ball/types/base/arch/: pointer.h  signed.h  uncertain.h  unsigned.h
include/ball/types/base/fixed/: ilp32.h  llp64.h  lp32.h  lp64.h  standard.h  win32.h  win64.h
include/ball/types/base/fixed/ilp32/: signed.h  uncertain.h  unsigned.h
include/ball/types/base/fixed/llp64/: signed.h  uncertain.h  unsigned.h
include/ball/types/base/fixed/lp32/: signed.h  uncertain.h  unsigned.h
include/ball/types/base/fixed/lp64/: signed.h  uncertain.h  unsigned.h
include/ball/types/base/fixed/standard/: signed.h  uncertain.h  unsigned.h
include/ball/types/c/: assert.h  bits.h  debugbreak.h  io.h  macros.h  math.h  memory.h  memoryaligned.h  mmap.h
include/ball/types/meta/: conditional.hpp  enableif.hpp  ispointer.hpp  issame.hpp  number.hpp  pack.hpp  removecv.hpp  removereference.hpp  select.hpp
src/ball/types/: memory.c  tests.cpp
src/ball/types/base/: tests.cpp
src/ball/types/c/: assert.cpp
